# SixFour

./: .gitignore  .swiftlint.yml  CLAUDE.md  NOTES.md  README.md  SETUP.md  SIXFOUR-MODEL.md  project.yml
Native/: SixFour-Bridging-Header.h  build-ios.sh  build.zig
scripts/: s4.sh  (+21 more)
spec/: ANALYSIS.md  BEAUTY_FINDINGS.md  BLEED_LOOP.md  COMPETITION.md  LOOKNET_LAYERS.md  LOOK_NN.md  MATH.md  NN_SPACE_NOTES.md  PHASE_DIAGRAM.md  README.md  spec.cabal  spec.warn
spec/analysis/: Main.hs  analysis.cabal  cabal.project
spec/analysis-data/: colorcloud.csv  descriptors.csv  entropy.csv  rd.csv
spec/analysis/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
spec/app/: Fixtures.hs  Gen.hs  Gif.hs  Spec.hs  Tui.hs
spec/archive/: BLEED_LOOP.md  CubeLadderEntropyExperiments.hs  GRAM_MAPPING.md  MATH.md  ModelAlgebra.hs  PHASE_DIAGRAM.md  README.md
spec/exploration/: GifSki.hs  V1-DEPRECATION-CANDIDATES.md  V2-FITS-THE-MODEL.md  V2-GIF89A-LATENT-NOTES.md  V2-HARDENED-ABSTRACTION.md  V2-HASKELL-TOOLS-MAP.md  V2-LATENT-BASIS-REVIEW.md  V2-LATENT-LAB-ENERGY-SKI-DESIGN.md  V2-PLAN.md  V2-RGB-FIRST-CLASS-PLAN.md  V2-SKI-EXPAND-CONTRACT.md  V2-SKI-PONDER-DIGEST.md  V2-STATE-OF-THE-UNION.md  V2.1-ENCODER-INPUT.md  V2.1-PROBABILISTIC-FIELD.md  V2.1-SESSION-2026-06-30.md  V2.1-STATE-AND-NEXT.md  V2.1-UIUX-FUNCTIONS.md  V2.1-UNCERTAINTY-TIMEFREQ.md  V2.1-WASSERSTEIN-BARYCENTRIC.md  V2.1-ZIG-FUNCTION-MAP.md  V21Definitions.hs  V2A2ClosestPoint.hs  V2CrossFrameBEnergy.hs  V2DualityTest.hs  V2EisensteinPrime.hs  V2EncodeDecodeBoundary.hs  V2EnergyArchitecture.hs  V2EnergyWeave.hs  V2Gif89aAxes.hs  V2Hylo.hs  V2IndexLzw.hs  V2Latent.hs  V2LatentMaintenance.hs  V2ModelWiring.hs  V2MotionMetadata.hs  V2PaletteScaling.hs  V2ProjectionScope.hs  V2RgbEisenstein.hs  V2SkiHomomorphism.hs  (+8 more)
spec/gen-test/: GenTests.hs
spec/scripts/: check-compartments.sh  gate.sh  lint-q16-crossing.sh  networks.dot  spec-docs.sh
spec/src/SixFour/Codegen/: Burn.hs  CaptureFormat.hs  CloudProjection.hs  Collapse.hs  CoreML.hs  DerivationLog.hs  DeviceTrain.hs  Ed25519.hs  GeneHash.hs  Genome.hs  GenomeCarrier.hs  GenomeFixed.hs  GenomePair.hs  Golden.hs  Governance.hs  GridAxis.hs  JepaData.hs  JepaHead.hs  LearnabilityTheorem.hs  LookCategory.hs  LookNetSwift.hs  MLX.hs  MaskedBand.hs  ModelIO.hs  PairTree.hs  PaletteValue.hs  QuartetDelta.hs  RGBT4D.hs  Sha512.hs  Shapes.hs  SigChain.hs  SwapCarrier.hs  Swift.hs  TemporalData.hs  VoxelReduce.hs
spec/src/SixFour/Spec/: ABSurface.hs  AboveFloorMargin.hs  ActDecisions.hs  AddressPicker.hs  Affiliation.hs  AnchorDiagnostic.hs  AnytimeDecode.hs  AtlasBoard.hs  AtlasCascade.hs  AtlasGame.hs  AtlasMove.hs  AtlasNetEval.hs  AtlasOracle.hs  AtlasState.hs  AxisNet.hs  AxisSKI.hs  Barycenter.hs  BitLedger.hs  BlindComplementGeometry.hs  BlindComplementIsA7.hs  BoardQ16.hs  Bottleneck16.hs  Boundary.hs  BoundedP6.hs  BudgetHead.hs  Bures.hs  ByteCarrier.hs  CanonicalPhase.hs  CaptureDiversity.hs  CaptureFormat.hs  CaptureRecord.hs  CarrierL.hs  CellFiber.hs  CellGrid.hs  CellMechanics.hs  CellNudge.hs  CellShapes.hs  ChannelProduct.hs  ChoiceTraining.hs  ChromaRotation.hs  (+282 more)
spec/src/SixFour/Spec/Hybrid/: Delta.hs  Hybrid.hs  Indices.hs  Laws.hs  Pipeline.hs  STBN3D.hs  Shape.hs  StageB1.hs  StageB2.hs  Trunk.hs
spec/test/: Spec.hs
spec/test/Properties/: ABSurface.hs  AboveFloorMargin.hs  ActDecisions.hs  AddressPicker.hs  Affiliation.hs  AnchorDiagnostic.hs  AnytimeDecode.hs  AtlasBoard.hs  AtlasCascade.hs  AtlasGame.hs  AtlasMove.hs  AtlasNetEval.hs  AtlasOracle.hs  AtlasState.hs  AxisNet.hs  AxisSKI.hs  Barycenter.hs  BitLedger.hs  BlindComplementGeometry.hs  BlindComplementIsA7.hs  BoardQ16.hs  Bottleneck16.hs  Boundary.hs  BoundedP6.hs  BudgetHead.hs  Bures.hs  ByteCarrier.hs  CanonicalPhase.hs  CaptureDiversity.hs  CaptureFormat.hs  CaptureRecord.hs  CarrierL.hs  CellFiber.hs  CellGrid.hs  CellMechanics.hs  CellNudge.hs  CellShapes.hs  ChannelProduct.hs  ChoiceTraining.hs  ChromaRotation.hs  (+278 more)
spec/viz/SixFour/Viz/: Gif.hs
studio/: .gitignore  CATEGORY_FINDINGS.md  Cargo.toml  FINDINGS.md  TOOLING-STANDARDS.md  deny.toml  requirements.txt
studio/analysis-core/: Cargo.toml
studio/analysis-core/src/: bures.rs  collapse.rs  color.rs  cyclic.rs  geometry.rs  gif_io.rs  gmm.rs  lib.rs  look.rs  synth.rs
studio/explore/: Cargo.toml
studio/explore/src/: main.rs
studio/look-nn/: Cargo.toml
studio/look-nn-baseline/: Cargo.toml
studio/look-nn-baseline/src/: lib.rs
studio/look-nn/src/: lib.rs
studio/pico8/: .gitignore  README.md  UX-IDEAS.md  cellgrid.p8  check_sync.py  render_grid.py  verify.sh
studio/viz/: Cargo.toml
studio/viz/src/: main.rs
trainer/: SCENE-REGIMEN.md  TRAINER-BUILD-PLAN.md  TRAINER-NOTES.md  TRAINING.md  atlas_net_mlx.py  atlas_synth.py  benchmark.py  check_golden.py  corpus_ingest.py  eval_l_quality.py  export_look_net_blob.py  export_organ.py  fed_sim.py  fed_sim_results.md  gates.py  gif_to_capture.py  global_palette.py  jepa_data.py  look_net_loss_mlx.py  native_kernels.py  pyproject.toml  regimen.py  smoke_test.py  synth_capture.py  synth_classes.py  synth_corpus_64.py  test_color_canonical.py  train_atlas_mlx.py  train_look_net_mlx.py  train_metric.py  v21_ingest.py  zig_native.py
trainer/coreai_export/: README.md  export_l_coreai.py
trainer/mlx/: __init__.py  above_floor_margin.py  autograd_check.py  capabilities.py  cell_budget.py  cell_loss.py  cli.py  context_super_res.py  delta_surrogate.py  dual_loss.py  eisenstein.py  encoder_frozen.py  eval_checkpoint.py  frame_energy.py  frame_palette.py  frame_stats.py  full_matrix_loss.py  full_matrix_model.py  full_matrix_train.py  full_matrix_train_loop.py  gate_trainer.py  gaussian_chroma.py  heldout_corpus.py  jepa_head_golden.py  jepa_loss.py  jepa_synth_octants.py  large_head.py  masked_band_trainer.py  model_io.py  per_scale.py  q16.py  scene_corpus.py  soft_hist_probe.py  superres.py  temporal_data.py  temporal_rung.py  test_anti_overfit.py  test_cell_loss.py  test_centered_cube.py  test_chroma_flow.py  (+13 more)
(+626 files in other folders)
