cabal-version:      3.0
name:               sixfour-spec
version:            0.1.0.0
synopsis:           Algebraic spec for the SixFour 64-frame, 256-color GIF pipeline.
description:
  Haskell source-of-truth for the SixFour per-frame palette pipeline
  (K-means / Wu / Octree quantizers, each producing a per-frame
  CompleteVoxelVolume) plus the on-device NN slot signatures. Emits
  Swift and Python contracts so the iOS app and the MLX trainer cannot
  drift from the spec.
author:             Daniel
build-type:         Simple
extra-source-files: README.md

common warnings
    ghc-options:    -Wall -Wno-unused-imports -Wno-unused-matches

library
    import:           warnings
    exposed-modules:
        SixFour.Spec.Map
        SixFour.Spec.Shape
        SixFour.Spec.Color
        SixFour.Spec.ColorFixed
        SixFour.Spec.ZoneProfile
        SixFour.Spec.LookTransfer
        SixFour.Spec.RedFrontEnd
        SixFour.Spec.CubeLut
        SixFour.Spec.Palette
        SixFour.Spec.Indices
        SixFour.Spec.Gauge
        SixFour.Spec.StageA
        SixFour.Spec.QuantFixed
        SixFour.Spec.Coverage
        SixFour.Spec.Collapse
        SixFour.Spec.QuartetDelta
        SixFour.Spec.Diversity
        SixFour.Spec.SpatialDither
        SixFour.Spec.GMM
        SixFour.Spec.Bures
        SixFour.Spec.Sinkhorn
        SixFour.Spec.Barycenter
        SixFour.Spec.Entropy
        SixFour.Spec.RGBTFeature
        SixFour.Spec.CubeLadder
        SixFour.Spec.PairTree
        SixFour.Spec.PairTreeFixed
        SixFour.Spec.RGBTLift
        SixFour.Spec.OctreeCell
        SixFour.Spec.PerScaleWeights
        SixFour.Spec.ScalePonder
        SixFour.Spec.TemporalLoop
        SixFour.Spec.VoxelReduce
        SixFour.Spec.DivergenceSchedule
        SixFour.Spec.ABSurface
        SixFour.Spec.CanonicalPhase
        SixFour.Spec.SigmaPairFixed
        SixFour.Spec.LeafOverride
        SixFour.Spec.IsometryMove
        SixFour.Spec.MoveRadiusSchedule
        SixFour.Spec.ThetaToDelta
        SixFour.Spec.GenomePair
        SixFour.Spec.GenomeBlend
        SixFour.Spec.GenomeCarrier
        SixFour.Spec.PaletteGesture
        SixFour.Spec.GroupRGBT
        SixFour.Spec.Quad4Fixed
        SixFour.Spec.GlobalVolume
        SixFour.Spec.SplitTree
        SixFour.Spec.HaarRibbon
        SixFour.Spec.GridAxis
        SixFour.Spec.Order
        SixFour.Spec.GridScript
        SixFour.Spec.Export
        SixFour.Spec.Lattice
        SixFour.Spec.Boundary
        SixFour.Spec.InfluenceField
        SixFour.Spec.CellFiber
        SixFour.Spec.CellGrid
        SixFour.Spec.GridLayout
        SixFour.Spec.MovableLayout
        SixFour.Spec.CellMechanics
        SixFour.Spec.WidgetDescriptor
        SixFour.Spec.Ownership
        SixFour.Spec.Display
        SixFour.Spec.FrontProjection
        SixFour.Spec.VoxelFit
        SixFour.Spec.CellShapes
        SixFour.Spec.SevenSeg
        SixFour.Spec.CloudProjection
        SixFour.Spec.PaletteSearch
        SixFour.Spec.Proposer
        SixFour.Spec.ValueHead
        SixFour.Spec.PaletteOracle
        SixFour.Spec.Dither
        SixFour.Spec.LookNet
        SixFour.Spec.LookCore
        SixFour.Spec.Layer
        SixFour.Spec.Scale
        SixFour.Spec.Preference
        SixFour.Spec.LookCategory
        SixFour.Spec.Bottleneck16
        SixFour.Spec.SigmaDecomp
        SixFour.Spec.Quad4
        SixFour.Spec.LinAlg
        SixFour.Spec.SigmaPairHead
        SixFour.Spec.Pipeline
        SixFour.Spec.AxisNet
        SixFour.Spec.Obfuscation
        SixFour.Spec.Loom
        SixFour.Spec.Significance
        SixFour.Spec.SignificanceFixed
        SixFour.Spec.Net
        SixFour.Spec.Cyclic
        SixFour.Spec.PlaybackClock
        SixFour.Spec.Look
        SixFour.Spec.Laws
        SixFour.Spec.Tensor
        SixFour.Spec.LookNetE
        SixFour.Spec.LookNetR
        SixFour.Spec.LookNetD
        SixFour.Spec.LookNetCompose
        SixFour.Spec.LookNetEval
        SixFour.Spec.AtlasNetEval
        SixFour.Spec.AtlasGame
        SixFour.Spec.BoardQ16
        SixFour.Spec.GLRM
        SixFour.Spec.GumbelSearch
        SixFour.Spec.Loss
        SixFour.Spec.STBN3D
        SixFour.Spec.AtlasBoard
        SixFour.Spec.AtlasMove
        SixFour.Spec.AtlasState
        SixFour.Spec.DeltaCodebook
        SixFour.Spec.AtlasOracle
        SixFour.Spec.PreferenceUpdate
        SixFour.Spec.PersonalGenome
        SixFour.Spec.DecisionLog
        SixFour.Spec.AtlasCascade
        SixFour.Spec.Upscale256
        SixFour.Codegen.Swift
        SixFour.Codegen.Shapes
        SixFour.Codegen.Burn
        SixFour.Codegen.CoreML
        SixFour.Codegen.MLX
        SixFour.Codegen.Golden
        SixFour.Codegen.Collapse
        SixFour.Codegen.RGBT4D
        SixFour.Codegen.VoxelReduce
        SixFour.Codegen.GenomePair
        SixFour.Codegen.GenomeCarrier
        SixFour.Codegen.PairTree
        SixFour.Codegen.QuartetDelta
        SixFour.Codegen.PaletteValue
        SixFour.Codegen.Genome
        SixFour.Codegen.GenomeFixed
        SixFour.Codegen.CloudProjection
        SixFour.Codegen.GridAxis
    build-depends:
        base       >=4.16 && <5
      , vector     >=0.13 && <0.14
      , containers >=0.6  && <0.8
      , text       >=1.2  && <2.2
      , transformers >=0.5 && <0.7
    hs-source-dirs:   src
    default-language: Haskell2010
    default-extensions:
        DataKinds
      , KindSignatures
      , GADTs
      , TypeApplications
      , ScopedTypeVariables
      , TypeFamilies
      , TypeOperators
      , ConstraintKinds
      , FlexibleContexts
      , FlexibleInstances
      , RankNTypes
      , DeriveGeneric
      , DerivingStrategies
      , GeneralizedNewtypeDeriving
      , BangPatterns
      , LambdaCase
      , OverloadedStrings

executable spec-codegen
    import:           warnings
    main-is:          Spec.hs
    build-depends:
        base
      , sixfour-spec
      , text
      , bytestring >=0.11 && <0.13
      , vector
      , directory  >=1.3 && <1.4
      , filepath   >=1.4 && <1.6
    hs-source-dirs:   app
    default-language: Haskell2010
    default-extensions:
        DataKinds
      , TypeApplications

-- Emits the cross-language GOLDEN fixtures the Zig native core verifies against
-- (Native/src/*_fixture_test.zig). Kept SEPARATE from spec-codegen so the iOS
-- drift gate (which runs spec-codegen into scratch dirs) never writes fixtures
-- into the real tree. Run manually: `cabal run spec-fixtures` → ../trainer/out.
executable spec-fixtures
    import:           warnings
    main-is:          Fixtures.hs
    other-modules:
        SixFour.Gen.GifWire
    build-depends:
        base
      , sixfour-spec
      , text
      , vector
      , containers
      , bytestring >=0.11 && <0.13
      , directory  >=1.3 && <1.4
      , filepath   >=1.4 && <1.6
    hs-source-dirs:   app gen
    default-language: Haskell2010
    default-extensions:
        DataKinds
      , TypeApplications
      , ScopedTypeVariables
      , KindSignatures
      , TypeOperators

executable spec-tui
    import:           warnings
    main-is:          Tui.hs
    build-depends:
        base
      , sixfour-spec
      , vector
      , mtl    >=2.2 && <2.4
      , brick  >=1.0 && <2.0
      , vty    >=5.33 && <6.0
    hs-source-dirs:   app
    default-language: Haskell2010
    default-extensions:
        DataKinds
      , TypeApplications
      , ScopedTypeVariables
      , TypeOperators

-- Renders the look-NN's problem + proofs as animated GIFs (the visual medium).
-- JuicyPixels (BSD-3) is isolated to this exe — it never enters the spec library.
executable spec-gif
    import:           warnings
    main-is:          Gif.hs
    other-modules:
        SixFour.Viz.Gif
    build-depends:
        base
      , sixfour-spec
      , vector
      , containers
      , bytestring  >=0.11 && <0.13
      , directory   >=1.3  && <1.4
      , filepath    >=1.4  && <1.6
      , JuicyPixels >=3.3  && <3.4
    hs-source-dirs:   viz app
    default-language: Haskell2010
    default-extensions:
        DataKinds
      , TypeApplications
      , ScopedTypeVariables

-- Generates FULL 64^3 GIFs that mimic the app's GIFEncoder.swift output, for
-- look-NN design + testing. Pure bytestring encoder/decoder — no JuicyPixels.
executable spec-gen
    import:           warnings
    main-is:          Gen.hs
    other-modules:
        SixFour.Gen.GifWire
        SixFour.Gen.GifDecode
        SixFour.Gen.AxisInput
        SixFour.Gen.Battery
        SixFour.Gen.Synth
        SixFour.Gen.Realize
        SixFour.Gen.Stats
        SixFour.Gen.Sweep
    build-depends:
        base
      , sixfour-spec
      , vector
      , containers
      , text
      , bytestring  >=0.11 && <0.13
      , directory   >=1.3  && <1.4
      , filepath    >=1.4  && <1.6
    hs-source-dirs:   gen app
    default-language: Haskell2010
    default-extensions:
        DataKinds
      , KindSignatures
      , TypeApplications
      , ScopedTypeVariables
      , TypeOperators

test-suite spec-tests
    import:           warnings
    type:             exitcode-stdio-1.0
    main-is:          Spec.hs
    other-modules:
        Properties.Color
        Properties.ColorFixed
        Properties.ZoneProfile
        Properties.LookTransfer
        Properties.RedFrontEnd
        Properties.CubeLut
        Properties.Gauge
        Properties.Surjectivity
        Properties.Wu
        Properties.QuantFixed
        Properties.Coverage
        Properties.Collapse
        Properties.Diversity
        Properties.GMM
        Properties.Bures
        Properties.Sinkhorn
        Properties.Barycenter
        Properties.Entropy
        Properties.RGBTFeature
        Properties.CubeLadder
        Properties.VoxelReduce
        Properties.DivergenceSchedule
        Properties.ABSurface
        Properties.GenomeCarrier
        Properties.PairTree
        Properties.PairTreeFixed
        Properties.RGBTLift
        Properties.OctreeCell
        Properties.PerScaleWeights
        Properties.ScalePonder
        Properties.CanonicalPhase
        Properties.SigmaPairFixed
        Properties.LeafOverride
        Properties.IsometryMove
        Properties.MoveRadiusSchedule
        Properties.GenomePair
        Properties.Proposer
        Properties.ValueHead
        Properties.ThetaToDelta
        Properties.PaletteGesture
        Properties.GroupRGBT
        Properties.Quad4Fixed
        Properties.GlobalVolume
        Properties.SplitTree
        Properties.GridAxis
        Properties.Order
        Properties.GridScript
        Properties.Export
        Properties.Lattice
        Properties.Boundary
        Properties.InfluenceField
        Properties.CellFiber
        Properties.CellGrid
        Properties.GridLayout
        Properties.MovableLayout
        Properties.CellMechanics
        Properties.WidgetDescriptor
        Properties.Ownership
        Properties.Display
        Properties.FrontProjection
        Properties.VoxelFit
        Properties.CellShapes
        Properties.SevenSeg
        Properties.CloudProjection
        Properties.PaletteSearch
        Properties.PaletteOracle
        Properties.LookCategory
        Properties.HaarRibbon
        Properties.QuartetDelta
        Properties.LinAlg
        Properties.Dither
        Properties.SpatialDither
        Properties.LookNet
        Properties.LookCore
        Properties.Layer
        Properties.Scale
        Properties.Preference
        Properties.Bottleneck16
        Properties.SigmaDecomp
        Properties.Quad4
        Properties.SigmaPairHead
        Properties.Pipeline
        Properties.AxisNet
        Properties.Obfuscation
        Properties.Loom
        Properties.Significance
        Properties.SignificanceFixed
        Properties.STBN3D
        Properties.Cyclic
        Properties.PlaybackClock
        Properties.Look
        Properties.Tensor
        Properties.LookNetE
        Properties.LookNetR
        Properties.LookNetD
        Properties.LookNetCompose
        Properties.CoreMLContract
        Properties.MLXContract
        Properties.GoldenForward
        Properties.AtlasNetEval
        Properties.AtlasGame
        Properties.BoardQ16
        Properties.GLRM
        Properties.GumbelSearch
        Properties.Loss
        Properties.AtlasBoard
        Properties.AtlasMove
        Properties.AtlasState
        Properties.DeltaCodebook
        Properties.AtlasOracle
        Properties.PreferenceUpdate
        Properties.PersonalGenome
        Properties.GenomeBlend
        Properties.DecisionLog
        Properties.AtlasCascade
        Properties.Upscale256
    build-depends:
        base
      , sixfour-spec
      , vector
      , containers
      , text
      , QuickCheck >=2.14 && <2.16
      , tasty      >=1.4  && <1.6
      , tasty-quickcheck >=0.10 && <0.12
    hs-source-dirs:   test
    default-language: Haskell2010
    default-extensions:
        DataKinds
      , ScopedTypeVariables
      , TypeApplications
      , TypeOperators
      , TypeFamilies
      , ConstraintKinds
      , FlexibleContexts
      , KindSignatures
      , AllowAmbiguousTypes

-- Tests for the statistical GIF generator: golden cross-check vs the Rust §8
-- oracle, realizer laws, entropy targeting, and the lossless round-trip.
test-suite gen-tests
    import:           warnings
    type:             exitcode-stdio-1.0
    main-is:          GenTests.hs
    other-modules:
        SixFour.Gen.GifWire
        SixFour.Gen.GifDecode
        SixFour.Gen.AxisInput
        SixFour.Gen.Synth
        SixFour.Gen.Realize
        SixFour.Gen.Stats
    build-depends:
        base
      , sixfour-spec
      , vector
      , containers
      , text
      , bytestring  >=0.11 && <0.13
      , QuickCheck >=2.14 && <2.16
      , tasty      >=1.4  && <1.6
      , tasty-quickcheck >=0.10 && <0.12
    hs-source-dirs:   gen gen-test
    default-language: Haskell2010
    default-extensions:
        DataKinds
      , KindSignatures
      , ScopedTypeVariables
      , TypeApplications
      , TypeOperators
      , OverloadedStrings
