cabal-version:      3.0
name:               sixfour-spec
version:            0.1.0.0
synopsis:           Algebraic spec for the SixFour 64-frame, 256-color GIF pipeline.
description:
  Haskell source-of-truth for the SixFour per-frame palette pipeline
  (K-means / Wu / Octree quantizers, each producing a per-frame
  CompleteVoxelVolume) plus the on-device NN slot signatures. Emits
  Swift and Python contracts so the iOS app and the MLX trainer cannot
  drift from the spec.
author:             Daniel
build-type:         Simple
extra-source-files: README.md

common warnings
    ghc-options:    -Wall -Wno-unused-imports -Wno-unused-matches

library
    import:           warnings
    exposed-modules:
        SixFour.Spec.Map
        SixFour.Spec.Shape
        SixFour.Spec.Color
        SixFour.Spec.ColorFixed
        SixFour.Spec.ZoneProfile
        SixFour.Spec.LookTransfer
        SixFour.Spec.RedFrontEnd
        SixFour.Spec.CubeLut
        SixFour.Spec.Palette
        SixFour.Spec.Indices
        SixFour.Spec.Gauge
        SixFour.Spec.StageA
        SixFour.Spec.QuantFixed
        SixFour.Spec.Coverage
        SixFour.Spec.Collapse
        SixFour.Spec.GlobalCollapseQ16
        SixFour.Spec.QuartetDelta
        SixFour.Spec.Diversity
        SixFour.Spec.EncoderModalityLoad
        SixFour.Spec.EncoderWidthAlloc
        SixFour.Spec.EncoderDepthAlloc
        SixFour.Spec.EncoderEntropyFloor
        SixFour.Spec.EncoderCorpus
        SixFour.Spec.EncoderGrounding
        SixFour.Spec.SyntheticCorpus
        SixFour.Spec.SpatialDither
        SixFour.Spec.GMM
        SixFour.Spec.Bures
        SixFour.Spec.Sinkhorn
        SixFour.Spec.Barycenter
        SixFour.Spec.Entropy
        SixFour.Spec.RGBTFeature
        SixFour.Spec.CubeLadder
        SixFour.Spec.PairTree
        SixFour.Spec.PairTreeFixed
        SixFour.Spec.RGBTLift
        SixFour.Spec.OctreeCell
        SixFour.Spec.LadderIdentity
        SixFour.Spec.LargeJepaHead
        SixFour.Spec.PerScaleWeights
        SixFour.Spec.ScalePonder
        SixFour.Spec.XYTLabDuality
        SixFour.Spec.LBalanceOperator
        SixFour.Spec.OctreeGenome
        SixFour.Spec.SubstrateDomain
        SixFour.Spec.SuccessiveRefinement
        SixFour.Spec.SuperResPalette
        SixFour.Spec.SynthesisPolicyValue
        SixFour.Spec.TwoMoveOctave
        SixFour.Spec.MoveSignal
        SixFour.Spec.RelationalResidual
        SixFour.Spec.RelationalMemory
        SixFour.Spec.BoundedP6
        SixFour.Spec.RemainderTail
        SixFour.Spec.ByteCarrier
        SixFour.Spec.Q16
        SixFour.Spec.DetailEntropy
        SixFour.Spec.DetailMaskedPrediction
        SixFour.Spec.MaskedBandPrediction
        SixFour.Spec.MaskedBandTrainer
        SixFour.Spec.DetailPredictor
        SixFour.Spec.Dim6
        SixFour.Spec.ProjectionOrdering
        SixFour.Spec.Dimensions
        SixFour.Spec.ChromaRotation
        SixFour.Spec.LatentNavigation
        SixFour.Spec.DetentNudge
        SixFour.Spec.NudgeStep
        SixFour.Spec.LatentProjection
        SixFour.Spec.OctreeForward
        SixFour.Spec.SelfSimilarReconstruct
        SixFour.Spec.DeferredSurfacing
        SixFour.Spec.SelfSupervisedRung
        SixFour.Spec.NeuronRedundancy
        SixFour.Spec.RungPivot
        SixFour.Spec.HJepaLevels
        SixFour.Spec.DisplayDecoder
        SixFour.Spec.Sided
        SixFour.Spec.DataParallel
        SixFour.Spec.JepaMemory
        SixFour.Spec.HalfwayLatent
        SixFour.Spec.JepaData
        SixFour.Spec.EncoderFrozen
        SixFour.Spec.ContinuousLoop
        SixFour.Spec.JepaTarget
        SixFour.Spec.PerAxisTraining
        SixFour.Spec.SameObjectInvariance
        SixFour.Spec.SameObjectJEPA
        SixFour.Spec.ConstructionEncoder
        SixFour.Spec.HierarchicalDelta
        SixFour.Spec.RootLatticeDetail
        SixFour.Spec.GaugeAction
        SixFour.Spec.ScaleFiltration
        SixFour.Spec.RingReduction
        SixFour.Spec.MetricLattice
        SixFour.Spec.RefinementSystem
        SixFour.Spec.TransportGroup
        SixFour.Spec.TemporalData
        SixFour.Spec.DeltaSurrogate
        SixFour.Spec.NudgeContamination
        SixFour.Spec.DeltaGesture
        SixFour.Spec.TriScaleBench
        SixFour.Spec.GestureAxis
        SixFour.Spec.ScaleSurface
        SixFour.Spec.PerceptualEncoder
        SixFour.Spec.GifDualView
        SixFour.Spec.CrossEncoderDistance
        SixFour.Spec.CoarseIsPalette
        SixFour.Spec.ScaleIndexedCorrespondence
        SixFour.Spec.DualEncoderJepa
        SixFour.Spec.MinimalInstructionSet
        SixFour.Spec.DitherLevel
        SixFour.Spec.MidLatentCrossPrediction
        SixFour.Spec.CubeTensor
        SixFour.Spec.ProjectionQuery
        SixFour.Spec.CarrierL
        SixFour.Spec.SteeringSpine
        SixFour.Spec.RedownsampleGate
        SixFour.Spec.PairedResidual
        SixFour.Spec.TemporalLoop
        SixFour.Spec.VoxelReduce
        SixFour.Spec.ABSurface
        SixFour.Spec.CanonicalPhase
        SixFour.Spec.SigmaPairFixed
        SixFour.Spec.LeafOverride
        SixFour.Spec.LocalPonder
        SixFour.Spec.GenomeCarrier
        SixFour.Spec.PaletteGesture
        SixFour.Spec.GroupRGBT
        SixFour.Spec.Quad4Fixed
        SixFour.Spec.GlobalVolume
        SixFour.Spec.SplitTree
        SixFour.Spec.HaarRibbon
        SixFour.Spec.GridAxis
        SixFour.Spec.Order
        SixFour.Spec.GridScript
        SixFour.Spec.Export
        SixFour.Spec.Lattice
        SixFour.Spec.Boundary
        SixFour.Spec.InfluenceField
        SixFour.Spec.CellFiber
        SixFour.Spec.CellGrid
        SixFour.Spec.GridLayout
        SixFour.Spec.MovableLayout
        SixFour.Spec.CellMechanics
        SixFour.Spec.WidgetDescriptor
        SixFour.Spec.Ownership
        SixFour.Spec.Display
        SixFour.Spec.FrontProjection
        SixFour.Spec.VoxelFit
        SixFour.Spec.CellShapes
        SixFour.Spec.SevenSeg
        SixFour.Spec.Dither
        SixFour.Spec.Bottleneck16
        SixFour.Spec.Loom
        SixFour.Spec.Significance
        SixFour.Spec.SignificanceFixed
        SixFour.Spec.Cyclic
        SixFour.Spec.PlaybackClock
        SixFour.Spec.Laws
        SixFour.Spec.STBN3D
        SixFour.Spec.AtlasCascade
        SixFour.Spec.Upscale256
        SixFour.Codegen.Swift
        SixFour.Codegen.Shapes
        SixFour.Codegen.JepaData
        SixFour.Codegen.JepaHead
        SixFour.Codegen.TemporalData
        SixFour.Codegen.Collapse
        SixFour.Codegen.RGBT4D
        SixFour.Codegen.VoxelReduce
        SixFour.Codegen.GenomeCarrier
        SixFour.Codegen.MaskedBand
        SixFour.Codegen.PairTree
        SixFour.Codegen.QuartetDelta
        SixFour.Codegen.GenomeFixed
        SixFour.Codegen.GridAxis
    build-depends:
        base       >=4.16 && <5
      , vector     >=0.13 && <0.14
      , containers >=0.6  && <0.8
      , text       >=1.2  && <2.2
      , transformers >=0.5 && <0.7
    hs-source-dirs:   src
    default-language: Haskell2010
    default-extensions:
        DataKinds
      , KindSignatures
      , GADTs
      , TypeApplications
      , ScopedTypeVariables
      , TypeFamilies
      , TypeOperators
      , ConstraintKinds
      , FlexibleContexts
      , FlexibleInstances
      , MultiParamTypeClasses
      , FunctionalDependencies
      , RankNTypes
      , DeriveGeneric
      , DerivingStrategies
      , GeneralizedNewtypeDeriving
      , BangPatterns
      , LambdaCase
      , OverloadedStrings

executable spec-codegen
    import:           warnings
    main-is:          Spec.hs
    build-depends:
        base
      , sixfour-spec
      , text
      , bytestring >=0.11 && <0.13
      , vector
      , directory  >=1.3 && <1.4
      , filepath   >=1.4 && <1.6
    hs-source-dirs:   app
    default-language: Haskell2010
    default-extensions:
        DataKinds
      , TypeApplications

-- Emits the cross-language GOLDEN fixtures the Zig native core verifies against
-- (Native/src/*_fixture_test.zig). Kept SEPARATE from spec-codegen so the iOS
-- drift gate (which runs spec-codegen into scratch dirs) never writes fixtures
-- into the real tree. Run manually: `cabal run spec-fixtures` → ../trainer/out.
executable spec-fixtures
    import:           warnings
    main-is:          Fixtures.hs
    other-modules:
        SixFour.Gen.GifWire
    build-depends:
        base
      , sixfour-spec
      , text
      , vector
      , containers
      , bytestring >=0.11 && <0.13
      , directory  >=1.3 && <1.4
      , filepath   >=1.4 && <1.6
    hs-source-dirs:   app gen
    default-language: Haskell2010
    default-extensions:
        DataKinds
      , TypeApplications
      , ScopedTypeVariables
      , KindSignatures
      , TypeOperators

executable spec-gen
    import:           warnings
    main-is:          Gen.hs
    other-modules:
        SixFour.Gen.GifWire
        SixFour.Gen.GifDecode
        SixFour.Gen.Battery
        SixFour.Gen.Synth
        SixFour.Gen.Realize
        SixFour.Gen.Stats
        SixFour.Gen.Sweep
    build-depends:
        base
      , sixfour-spec
      , vector
      , containers
      , text
      , bytestring  >=0.11 && <0.13
      , directory   >=1.3  && <1.4
      , filepath    >=1.4  && <1.6
    hs-source-dirs:   gen app
    default-language: Haskell2010
    default-extensions:
        DataKinds
      , KindSignatures
      , TypeApplications
      , ScopedTypeVariables
      , TypeOperators

test-suite spec-tests
    import:           warnings
    type:             exitcode-stdio-1.0
    main-is:          Spec.hs
    other-modules:
        Properties.Color
        Properties.ColorFixed
        Properties.ZoneProfile
        Properties.LookTransfer
        Properties.RedFrontEnd
        Properties.CubeLut
        Properties.Gauge
        Properties.Surjectivity
        Properties.Wu
        Properties.QuantFixed
        Properties.Coverage
        Properties.Collapse
        Properties.GlobalCollapseQ16
        Properties.Diversity
        Properties.EncoderModalityLoad
        Properties.EncoderWidthAlloc
        Properties.EncoderDepthAlloc
        Properties.EncoderEntropyFloor
        Properties.EncoderCorpus
        Properties.EncoderGrounding
        Properties.SyntheticCorpus
        Properties.GMM
        Properties.Bures
        Properties.Sinkhorn
        Properties.Barycenter
        Properties.Entropy
        Properties.RGBTFeature
        Properties.CubeLadder
        Properties.VoxelReduce
        Properties.ABSurface
        Properties.GenomeCarrier
        Properties.PairTree
        Properties.PairTreeFixed
        Properties.RGBTLift
        Properties.OctreeCell
        Properties.LadderIdentity
        Properties.LargeJepaHead
        Properties.PerScaleWeights
        Properties.ScalePonder
        Properties.XYTLabDuality
        Properties.LBalanceOperator
        Properties.OctreeGenome
        Properties.SubstrateDomain
        Properties.SuccessiveRefinement
        Properties.SuperResPalette
        Properties.SynthesisPolicyValue
        Properties.TwoMoveOctave
        Properties.MoveSignal
        Properties.BoundedP6
        Properties.Sided
        Properties.DataParallel
        Properties.JepaMemory
        Properties.HalfwayLatent
        Properties.JepaData
        Properties.RelationalResidual
        Properties.RelationalMemory
        Properties.RemainderTail
        Properties.ByteCarrier
        Properties.Q16
        Properties.DetailEntropy
        Properties.DetailMaskedPrediction
        Properties.MaskedBandPrediction
        Properties.MaskedBandTrainer
        Properties.DetailPredictor
        Properties.Dim6
        Properties.ProjectionOrdering
        Properties.Dimensions
        Properties.ChromaRotation
        Properties.LatentNavigation
        Properties.DetentNudge
        Properties.NudgeStep
        Properties.LatentProjection
        Properties.OctreeForward
        Properties.SelfSimilarReconstruct
        Properties.DeferredSurfacing
        Properties.SelfSupervisedRung
        Properties.NeuronRedundancy
        Properties.RungPivot
        Properties.HJepaLevels
        Properties.DisplayDecoder
        Properties.EncoderFrozen
        Properties.ContinuousLoop
        Properties.JepaTarget
        Properties.PerAxisTraining
        Properties.SameObjectInvariance
        Properties.SameObjectJEPA
        Properties.ConstructionEncoder
        Properties.HierarchicalDelta
        Properties.RootLatticeDetail
        Properties.GaugeAction
        Properties.ScaleFiltration
        Properties.RingReduction
        Properties.MetricLattice
        Properties.RefinementSystem
        Properties.TransportGroup
        Properties.TemporalData
        Properties.DeltaSurrogate
        Properties.NudgeContamination
        Properties.DeltaGesture
        Properties.TriScaleBench
        Properties.GestureAxis
        Properties.ScaleSurface
        Properties.PerceptualEncoder
        Properties.GifDualView
        Properties.CrossEncoderDistance
        Properties.CoarseIsPalette
        Properties.ScaleIndexedCorrespondence
        Properties.DualEncoderJepa
        Properties.MinimalInstructionSet
        Properties.DitherLevel
        Properties.MidLatentCrossPrediction
        Properties.CubeTensor
        Properties.ProjectionQuery
        Properties.CarrierL
        Properties.SteeringSpine
        Properties.RedownsampleGate
        Properties.PairedResidual
        Properties.CanonicalPhase
        Properties.SigmaPairFixed
        Properties.LeafOverride
        Properties.LocalPonder
        Properties.PaletteGesture
        Properties.GroupRGBT
        Properties.Quad4Fixed
        Properties.GlobalVolume
        Properties.SplitTree
        Properties.GridAxis
        Properties.Order
        Properties.GridScript
        Properties.Export
        Properties.TemporalLoop
        Properties.Lattice
        Properties.Boundary
        Properties.InfluenceField
        Properties.CellFiber
        Properties.CellGrid
        Properties.GridLayout
        Properties.MovableLayout
        Properties.CellMechanics
        Properties.WidgetDescriptor
        Properties.Ownership
        Properties.Display
        Properties.FrontProjection
        Properties.VoxelFit
        Properties.CellShapes
        Properties.SevenSeg
        Properties.HaarRibbon
        Properties.QuartetDelta
        Properties.Dither
        Properties.SpatialDither
        Properties.Bottleneck16
        Properties.Loom
        Properties.Significance
        Properties.SignificanceFixed
        Properties.STBN3D
        Properties.Cyclic
        Properties.PlaybackClock
        Properties.AtlasCascade
        Properties.Upscale256
    build-depends:
        base
      , sixfour-spec
      , vector
      , containers
      , text
      , QuickCheck >=2.14 && <2.16
      , tasty      >=1.4  && <1.6
      , tasty-quickcheck >=0.10 && <0.12
    hs-source-dirs:   test
    default-language: Haskell2010
    default-extensions:
        DataKinds
      , ScopedTypeVariables
      , TypeApplications
      , TypeOperators
      , TypeFamilies
      , ConstraintKinds
      , FlexibleContexts
      , KindSignatures
      , AllowAmbiguousTypes

-- Tests for the statistical GIF generator: golden cross-check vs the Rust §8
-- oracle, realizer laws, entropy targeting, and the lossless round-trip.
test-suite gen-tests
    import:           warnings
    type:             exitcode-stdio-1.0
    main-is:          GenTests.hs
    other-modules:
        SixFour.Gen.GifWire
        SixFour.Gen.GifDecode
        SixFour.Gen.Synth
        SixFour.Gen.Realize
        SixFour.Gen.Stats
    build-depends:
        base
      , sixfour-spec
      , vector
      , containers
      , text
      , bytestring  >=0.11 && <0.13
      , QuickCheck >=2.14 && <2.16
      , tasty      >=1.4  && <1.6
      , tasty-quickcheck >=0.10 && <0.12
    hs-source-dirs:   gen gen-test
    default-language: Haskell2010
    default-extensions:
        DataKinds
      , KindSignatures
      , ScopedTypeVariables
      , TypeApplications
      , TypeOperators
      , OverloadedStrings
